# screen_pixel

./: CHANGELOG.md  README.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: main.cpp
macos/: screen_pixel.podspec
macos/Classes/: ScreenPixelPluginTests.swift
screen_pixel/: .gitignore  .metadata  LICENSE  README.md  pubspec.yaml
screen_pixel/example/: README.md  pubspec.yaml
screen_pixel/example/integration_test/: plugin_integration_test.dart
screen_pixel/example/lib/: main.dart
screen_pixel/example/macos/RunnerTests/: RunnerTests.swift
screen_pixel/example/test/: widget_test.dart
screen_pixel/example/windows/runner/: Runner.rc
screen_pixel/lib/: screen_pixel.dart  screen_pixel_method_channel.dart  screen_pixel_platform_interface.dart
screen_pixel/macos/: screen_pixel.podspec
screen_pixel/macos/Classes/: ScreenPixelPlugin.swift
screen_pixel/test/: screen_pixel_method_channel_test.dart  screen_pixel_test.dart
screen_pixel/windows/: CMakeLists.txt
screen_pixel/windows/include/screen_pixel/: screen_pixel_plugin_c_api.h
screen_pixel/windows/test/: screen_pixel_plugin_test.cpp
test/: screen_pixel_test.dart
windows/: CMakeLists.txt  screen_pixel_plugin.cpp  screen_pixel_plugin.h  screen_pixel_plugin_c_api.cpp  screen_pixel_plugin_c_api.h
windows/test/: screen_pixel_plugin_test.cpp
